# pflib

./: .clang-format  .gitignore  .gitmodules  Backend_8h_source.html  Bias_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  Compile_8h.html  Compile_8h.js  Compile_8h__dep__incl.map  Compile_8h__dep__incl.md5  Compile_8h__incl.map  Compile_8h__incl.md5  Compile_8h_source.html  Config.cmake.in  DAQ_8h_source.html  DetectorConfiguration_8h_source.html  Elinks_8h_source.html  Exception_8h_source.html  FastControl_8h_source.html  GPIO_8h_source.html  GenerateVersionHeader.cmake  Hcal_8h_source.html  I2C_8h_source.html  LinkPacket_8h_source.html  Makefile  Menu_8h_source.html  PolarfirePacket_8h_source.html  PolarfireTarget_8h_source.html  README.md  ROC_8h_source.html  Rcfile_8h_source.html  RocPacket_8h_source.html  RogueWishboneInterface_8h_source.html  SuperPacket_8h_source.html  WishboneInterface_8h_source.html  WishboneTarget_8h_source.html  align_phase.cxx  align_phase_word_BAK.cxx  align_phase_word_allchannels.cxx  (+341 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build-test-image.yml  doc.yml  format.yml  test.yml  zcu-build.yml
alignment/: align_serializer.sh  check_gpio.sh  econ_align.sh  econ_configure.sh  econ_phasetraining.sh  econ_setrunbit.sh  econt_phasetraining.sh  gpio_turnoff.sh  gpio_turnon.sh  roc_configure.sh
ana/: README.md  do_toa_vref_analysis.ipynb  parameter-time-scan.py  read.py  rogue-read.py
ana/charge/: plt_gen.py  (+7 more)
app/: econd_decoder.cxx  pfcompile.cxx  pfdecoder.cc  pfdecoder.cxx  pfdecompile.cxx  pfdefaults.cxx  rogue-decoder.py  rogue-extract.py  rogue_decoder.cxx  set_refclk.py
config/: Lund_hgcroc_board_testing_settings_20250925_082809.yaml  README.md  charge_injection.yaml  detector_example.yaml  disable-tot-toa.yaml  econd_init.yaml  econd_umn_init.yaml  hcal-backplane-zcu-pftool.yaml  top.yaml
docs/: README.md  doxyfile
env/: Containerfile  Containerfile.bittware-host  Containerfile.zcu  README.md  setup-daq-server.sh
register_maps/: CMakeLists.txt  ECOND_I2C_params_regmap.yaml  ECOND_test.yaml  ECONT_I2C_params_regmap.yaml  README.md  byte-pair-to-page-reg.py  econ-to-header.py  lpgbt-to-code.py  lpgbt_regmap.yaml  register_maps.h.in  register_maps_types.h  si_roc_regmap.yaml  si_rocv3b_regmap.yaml  sipm_rocv2.h  sipm_rocv3b_regmap.yaml  test_econd_registers.yaml  write-direct-access-header.py  write-unifying-header.py
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_f.js  (+53 more)
src/: DAQ.cxx
swamp-cpp-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
swamp-cpp-master/ci/almalinux/8/aarch64/: .gitlab-ci.yml
swamp-cpp-master/ci/almalinux/8/x86_64/: .gitlab-ci.yml
swamp-cpp-master/ci/almalinux/9/aarch64/: .gitlab-ci.yml
swamp-cpp-master/ci/almalinux/9/x86_64/: .gitlab-ci.yml
swamp-cpp-master/cmake/: FindEMP.cmake  FindSpdlog.cmake
swamp-cpp-master/reg_maps/: ECOND_I2C_params_regmap.json  ECONT_I2C_params_regmap.json  si_roc_directaccess_regmap.yaml  sipm_rocv3_regmap.yaml  vtrx_regmap.yaml
swamp-cpp-master/scripts/: insectASICCache.py
swamp-cpp-master/swamp/executables/: econ_control.cxx  generate_asic_cache_template.cxx  i2c_master_config.cxx  lpgbt_adc_control.cxx  lpgbt_control.cxx  lpgbt_gpio_control.cxx  lpgbt_i2c_test.cxx  roc_control.cxx  vtrxp_control.cxx
swamp-cpp-master/swamp/include/: adc.hpp  adcfactory.hpp  carrier.hpp  chip.hpp  chipfactory.hpp  dummyChip.hpp  dummyTransport.hpp  econ.hpp  econ_helper.hpp  econ_parameter.hpp  emp_interface.hpp  exception.hpp  gpio.hpp  gpiofactory.hpp  hw_interface.hpp  ic_ec_with_emp.hpp  ic_ec_with_sct.hpp  lpgbt.hpp  lpgbt_adc.hpp  lpgbt_gpio.hpp  lpgbt_helper.hpp  lpgbt_i2c.hpp  lpgbt_reg.hpp  lpgbt_reg_and_val.hpp  magic_enum.hpp  redis-asic-cache.hpp  redis-monitoring.hpp  roc.hpp  roc_helper.hpp  roc_parameter.hpp  roc_reg_and_val.hpp  sct_interface.hpp  sct_rx_decoder.hpp  sct_tx_encoder.hpp  spdlogger.hpp  swamp_type.hpp  timer.hpp  transport.hpp  transportfactory.hpp  vtrxp.hpp  (+2 more)
swamp-cpp-master/swamp/src/: adc.cpp  econ.cpp  econ_helper.cpp  gpio.cpp  ic_ec_with_emp.cpp  ic_ec_with_sct.cpp  lpgbt.cpp  lpgbt_adc.cpp  lpgbt_gpio.cpp  lpgbt_helper.cpp  lpgbt_i2c.cpp  roc.cpp  roc_helper.cpp  sct_rx_decoder.cpp  sct_tx_encoder.cpp  vtrxp.cpp
swamp-cpp-master/test/: chip.cxx  econ.cxx  emp.cxx  exception.cxx  lpgbt.cxx  lpgbt_adc.cxx  lpgbt_gpio.cxx  lpgbt_i2c.cxx  roc.cxx  sct.cxx  transport.cxx  type.cxx  vtrxp.cxx
swamp-cpp-master/test/config/: asic-template.yaml  direct_roc_registers.yaml  econd_default.yaml  econt_default.yaml  emp_test.yaml  gpio_down.yaml  gpio_up.yaml  init_econd.yaml  init_econt.yaml  init_roc.yaml  init_roc3b_full_cache.yaml  init_roc_3b.yaml  init_roc_full_cache.yaml  init_vtrx.yaml  roc-poweron-default.yaml  sct_test.yaml  setup_daq_lpgbt.yaml  si-roc3b-poweron-default.yaml  test_train.yaml
test/: README.md  compile.cxx  decoding.cxx  decoding.py  eg.cxx  helpers.h  main.cxx  parameters.cxx  test_menu.cxx  utility.cxx
tool/: Menu.cc  Menu.h  README.md  Rcfile.cc  pf_tbmerge.cxx  pfcompile.cxx  pfconfigure.cxx  pfdecoder.cc  pfdecompile.cxx  pfdefaults.cxx  pftool.cc  pftool.h  pftool_bias.cc  pftool_bias.h  pftool_daq.cc  pftool_daq.h  pftool_elinks.cc  pftool_elinks.h  pftool_expert.cc  pftool_expert.h  pftool_fastcontrol.cc  pftool_fastcontrol.h  pftool_hardcoded_values.h  pftool_headers.cc  pftool_headers.h  pftool_i2c.cc  pftool_i2c.h  pftool_roc.cc  pftool_roc.h  pftool_tasks.cc  pftool_tasks.h  test_menu.cxx
uhal/: uMNio-core.xml  uMNio-daq.xml  uMNio-ioosc.xml  uMNio-laser.xml  uMNio-ldmx.xml  uMNio-qie.xml  uMNio-trig.xml  uMNio.xml
(+460 files in other folders)
